<resources>
    <string name="app_name">彩票速查</string>
    <string name="action_exit">退出应用</string>
    <string name="action_about">关于</string>
    <string name="drawer_in">打开抽屉</string>
    <string name="drawer_out">关闭抽屉</string>
    <string name="lottery_name_ssq">双色球</string>
    <string name="lottery_name_3d">福彩3D</string>
    <string name="lottery_name_qlc">七乐彩</string>
    <string name="lottery_name_dlt">大乐透</string>
    <string name="lottery_name_pl3">排列3</string>
    <string name="lottery_name_pl5">排列5</string>
    <string name="lottery_name_qxc">七星彩</string>
    <string name="desc_ssq">[每周二、四、日21:15开奖]</string>
    <string name="desc_qlc">[每周一,三,五开奖]</string>
    <string name="desc_dlt">[每周一、三、六20:30开奖]</string>
    <string name="desc_pl3">[每日开奖]</string>
    <string name="desc_qxc">[每周二,五,日开奖]</string>
    <string name="desc_periodfrom">第</string>
    <string name="desc_period">期</string>
    <string name="desc_prize">开奖日期：</string>
    <string name="msg_query">最新数据获取中……</string>
    <string name="txt_prize">摇一注</string>
    <string name="txt_ok">确定</string>
    <string name="umeng_key">NTY1ZTdjOWNlMGY1NWE4MzhhMDAxODkx</string>
    <string name="tip_notify_title">最新开奖结果</string>
    <string name="tip_notify_text">开奖了，点击查看</string>
</resources>
